added more categories

--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -4,17 +4,20 @@
 
     <div id="sidebar-wrapper">
 		<ul class="sidebar-nav">
-			<li class="sidebar-brand">Menu</li>
-			<li role="presentation"><a href="/">Home</a></li>
+			<!--<li class="sidebar-brand">Menu</li>
+			<li role="presentation"><a href="/">Home</a></li> -->
 			<li class="menuSeparator"></li>
-			<li role="presentation" class="active">Categories</li>
+			<li role="presentation" class="active">Sort Categories</li>
 			<li class="menuSeparator"></li>
-			<li role="presentation"><a href="/category/1">Grey</a></li>
-			<li role="presentation"><a href="/category/2">Blue</a></li>
-			<li role="presentation"><a href="/category/3">Green</a></li>
-			<li role="presentation"><a href="/category/4">Purple</a></li>
-			<li role="presentation"><a href="/category/5">Yellow</a></li>
-			<li role="presentation"><a href="/category/6">Red</a></li>
+			<li role="presentation"><a href="#">Freshest</a></li>
+			<li role="presentation"><a href="#">Poppin</a></li>
+			<li role="presentation"><a href="#">Greatest Of All Time</a></li>
+			<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
+			<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
+			<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
+			<li role="presentation"><a href="/category/4">Party</a></li> <!-- Purple -->
+			<li role="presentation"><a href="/category/5">Happy</a></li> <!-- Yellow -->
+			<li role="presentation"><a href="/category/6">Angry</a></li> <!-- Red -->
 			<li class="menuSeparator"></li>
 			<li role="presentation">Help and Settings<li>
 			<li class="menuSeparator"></li>
