accordion about page
added accordion to the about page

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -31,13 +31,28 @@
 								</div>
 
 								<div class="panel-body">
-									<p>FeelzApp is your new diary. You can post anonymously</br>
-									or reveal your identity. Have a strong feeling? Happy? Sad?</br>
-									Angry? Let it out on the FeelzApp. Did you read a post that</br>
-									gave you the Feelz? Bump it to the top of the feed so others</br>
-									can get their Feelz on too. We're all friends here, so be nice!</br>
-									Enjoy!</br>
-									</p>
+									<div class="accordion">
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-1">About the App</a>
+											
+											<div id="accordion-1" class="accordion-section-content">
+											<p>FeelzApp is your new diary. You can post anonymously or reveal your identity. Have a strong feeling? Happy? Sad? Angry? Let it out on the FeelzApp. Did you read a post that gave you the Feelz? Bump it to the top of the feed so others can get their Feelz on too. We're all friends here, so be nice! Enjoy!</br></p>
+											</div>
+										</div>
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-2">Our Team</a>
+											
+											<div id="accordion-2" class="accordion-section-content">
+												<h6><b>Mona</b></h6>
+												<p>Mona is senior at UCSD. She is majoring in Computer Science. Her hobbies include...</p>
+												<h6><b>Kevin</b></h6>
+												<p>Kevin is a junior at UCSD. He is majoring in Computer Engineering with a focus in Artificial Intelligence. His hobbies include playing basketball, working out, and listening to music.</p>
+												<h6><b>Julia</b></h6>
+												<p>Julia is junior at UCSD. She is majoring in Cognitive Science with a specialization in Human-Computer Interaction and a minor in Computer Science. Her hobbies include playing the guitar, watching movies, and hanging out with her cat.</p>
+											</div>
+										</div>
+									</div>
+
 							 	 </div>
 							 
 							 </div>
@@ -65,5 +80,6 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/hideNav.js"></script>
 	<script src="js/logout.js"></script>
+	<script src="js/help_accordion.js"></script>
 
 </html>
