--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,6 +3,13 @@
 <html>
 <head>
 	<title>Login to FeelzApp</title>	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 </head>
 
 <!-- fixed position navibar on top of screen -->
@@ -18,10 +25,10 @@
 
 <body>
     <div class="container">    
-        <div id="loginbox" style="margin-top:15%;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+        <div id="loginbox" style="margin-top:20%;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
             <div class="panel panel-info" >
                 <div class="panel-heading">
-                    <div class="panel-title">Sign In To FeelzApp</div>
+                    <div class="panel-title">Sign In</div>
                     <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="Forgot_Password">Forgot password?</a></div>
                 </div>     
 
@@ -86,11 +93,7 @@
 
 <script src="https://code.jquery.com/jquery.js"></script>
     
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
