--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -6,12 +6,14 @@
 		<ul class="sidebar-nav">
 			<!--<li class="sidebar-brand">Menu</li>
 			<li role="presentation"><a href="/">Home</a></li> -->
-			<li class="menuSeparator"></li>
-			<li role="presentation" class="active">Sort Categories</li>
+			<li role="presentation" class="active">Sort All Posts</li>
 			<li class="menuSeparator"></li>
 			<li role="presentation"><a href="#">Freshest</a></li>
 			<li role="presentation"><a href="#">Poppin</a></li>
 			<li role="presentation"><a href="#">Greatest Of All Time</a></li>
+			<li class="menuSeparator"></li>
+			<li role="presentation">Moods<li>
+			<li class="menuSeparator"></li>
 			<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
 			<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
 			<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
