--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -24,9 +24,14 @@
 	    				</a>
 	    			</div>
 	  		 	</div>
-			 	<div id="fullPostInfo" class="panel-body">
-			    	placeholder
+			 	<div class="panel-body">
+			 		<div id = "fullPostInfo">placeholder</div>
+			 		<div class="pull-right">
+			 			<br>
+			 			<small id = "fullPostDate">placeholder<small>
+			 		</div>
 			  	</div>
+			  	
 			</div>
 		</div>
 	</div>
