--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -8,12 +8,14 @@
 			<li role="presentation"><a href="/">Home</a></li> -->
 			<li role="presentation" class="active">Sort All Posts</li>
 			<li class="menuSeparator"></li>
-			<li role="presentation"><a href="#">Freshest</a></li>
-			<li role="presentation"><a href="#">Poppin</a></li>
-			<li role="presentation"><a href="#">Greatest Of All Time</a></li>
+			<li role="presentation"><a href="/">Freshest</a></li>
+			<li role="presentation"><a href="/">Poppin</a></li>
+			<li role="presentation"><a href="/">Greatest Of All Time</a></li>			
 			<li class="menuSeparator"></li>
+
 			<li role="presentation">Moods<li>
 			<li class="menuSeparator"></li>
+
 			<li role="presentation"><a href="/category/1">Chill</a></li> <!-- Grey -->
 			<li role="presentation"><a href="/category/2">Sad</a></li> <!-- Blue -->
 			<li role="presentation"><a href="/category/3">Good</a></li> <!-- Green -->
@@ -21,8 +23,10 @@
 			<li role="presentation"><a href="/category/5">Happy</a></li> <!-- Yellow -->
 			<li role="presentation"><a href="/category/6">Angry</a></li> <!-- Red -->
 			<li class="menuSeparator"></li>
+
 			<li role="presentation">Help and Settings<li>
 			<li class="menuSeparator"></li>
+			
 			<li role="presentation"><a href="/About">About</a></li>
 			<li role="presentation"><a href="/Help">Help</a></li>
 			<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
