add sort by bumps

--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -10,7 +10,7 @@
 			<li class="menuSeparator"></li>
 			<li role="presentation"><a href="/">Freshest</a></li>
 			<li role="presentation"><a href="/">Poppin</a></li>
-			<li role="presentation"><a href="/">Greatest Of All Time</a></li>			
+			<li role="presentation"><a href="/bumpView">Greatest Of All Time</a></li>			
 			<li class="menuSeparator"></li>
 
 			<li role="presentation">Moods<li>
