sidebar/navbar cleanup, fix welcome xxx

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -15,7 +15,7 @@
 
 		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
-			{{>feelzNaviBar}}
+			{{>feelzNaviBarNoPost}}
 
 			{{> sideBar}}
 
@@ -78,7 +78,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/hideNav.js"></script>
+	<script src="/js/sidebarSetup.js"></script>
 	<script src="js/logout.js"></script>
 	<script src="js/help_accordion.js"></script>
 
