--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -18,7 +18,7 @@
 	<div id="wrapper">
 
 		<!-- fixed position navibar on top of screen -->
-		{{>feelzNaviBar}}
+		{{>feelzNaviBarNoPost}}
 
 		{{>sideBar}}
 
@@ -63,7 +63,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/changePassword.js"></script>
-	<script src="/js/hideNav.js"></script>
+	<script src="/js/sidebarSetup.js"></script>
 	<script src="js/logout.js"></script>
 
 
