--- a/views/partials/feelzNaviBarNoPost.handlebars
+++ b/views/partials/feelzNaviBarNoPost.handlebars
@@ -17,12 +17,7 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-left pull-left">
-					<p class="navbar-text">Welcome {{username}}</p>
-				</div>
-				<div class="navbar-right pull-right">
-					<!--- make newpost button on the navibar.  
-							It will change to "back" on form load. -->
-					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
+					<p class="navbar-text" style="margin-right:3px">Welcome {{username}}</p>
 				</div>
 			</div>
 
