--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -16,7 +16,7 @@
 
 		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
-			{{>feelzNaviBar}}
+			{{>feelzNaviBarNoPost}}
 
 			{{> sideBar}}
 
@@ -92,7 +92,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/hideNav.js"></script>
+	<script src="js/sidebarSetup.js"></script>
 	<script src="js/logout.js"></script>
 	<script src="js/help_accordion.js"></script>
 	
