--- a/public/css/FeelzApp.css
+++ b/public/css/FeelzApp.css
@@ -43,6 +43,10 @@ body {
 	height: 30%;
 }
 
+.panel-footer {
+  text-align: right;
+}
+
 .postSnippet {
 	position: static;
  }
@@ -53,7 +57,6 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
-	height: 32%;
  }
  
 
