--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -26,10 +26,9 @@
 	  		 	</div>
 			 	<div class="panel-body">
 			 		<div id = "fullPostInfo">placeholder</div>
-			 		<div class="pull-right">
-			 			<br>
-			 			<small id = "fullPostDate">placeholder<small>
-			 		</div>
+			  	</div>
+			  	<div class="panel-footer">
+			  		<small id = "fullPostDate">placeholder<small>
 			  	</div>
 			  	
 			</div>
