make close button black, was blue default (hard to see on sad)

--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -19,7 +19,7 @@
 	    				<strong id="fullPostBumpCount">placeholder</strong>
 	    				<a id="bumpButton" class="btn btn-default btn-sm">bump</a>
 	    				<a onclick="hidePopupPost()" >
-	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
+	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" style="color:black" ></span>
 	    					<span class="sr-only">Close</span>
 	    				</a>
 	    			</div>
