--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -17,12 +17,12 @@
 							<!-- Single button dropdown menu for choosing category -->
 							<select type="button" class="form-control" id="newPostCategory">
 								<option>Category</option>
-							    <option value="1">Grey</option>
-							    <option value="2">Blue</option>
-							    <option value="3">Green</option>
-							    <option value="4">Purple</option>
-							    <option value="5">Yellow</option>
-							    <option value="6">Red Note: please rename these</option>
+							    <option value="panel-default">Chill</option>
+							    <option value="panel-primary">Sad</option>
+							    <option value="panel-success">Good</option>
+							    <option value="panel-custom">Party</option>
+							    <option value="panel-warning">Happy</option>
+							    <option value="panel-danger">Angry</option>
 							</select>
 					</div>
 
