--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -8,9 +8,9 @@
 			<li role="presentation"><a href="/">Home</a></li> -->
 			<li role="presentation" class="active">Sort All Posts</li>
 			<li class="menuSeparator"></li>
-			<li role="presentation"><a href="/">Freshest</a></li>
-			<li role="presentation"><a href="/">Poppin</a></li>
-			<li role="presentation"><a href="/bumpView">Greatest Of All Time</a></li>			
+			<li role="presentation"><a href="/sort/date">Newest</a></li>
+			<li role="presentation"><a href="/sort/date/bump">Best Today</a></li>
+			<li role="presentation"><a href="/bumpView">Top posts</a></li>			
 			<li class="menuSeparator"></li>
 
 			<li role="presentation">Moods<li>
