--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -38,6 +38,7 @@
 											<a class="accordion-section-title" href="#accordion-1">Creating an Account</a>
 											
 											<div id="accordion-1" class="accordion-section-content">
+												<img src="images/signup_button.png" class="help_images"></br>
 												<p>Creating an account is super easy and fun here on the FeelzApp. Just click on the "Sign Up HERE!" button on the Log In screen and you'll be on your way!</p>
 											</div>
 										</div>
@@ -55,6 +56,7 @@
 											<a class="accordion-section-title" href="#accordion-3">How to Post</a>
 											
 											<div id="accordion-3" class="accordion-section-content">
+												<img src="images/newpost_button.png" class="help_images"></br>
 												<p>You can post your Feelz by simply clicking on the "New Post" button on the top right corner of the main feed page and voila!</p>
 											</div>
 										</div>
@@ -63,6 +65,7 @@
 											
 											<div id="accordion-4" class="accordion-section-content">
 												<h6><b>I really liked a post I saw, how do I express this?</b></h6>
+												<img src="images/bump_button.png" class="help_images"></br>
 												<p>Feeling a post? Awesome! Go ahead and tap/click on the post and select "bump" from the top right corner. This will move the post to the top of the feed and give it Feel points!</p>
 											</div>
 										</div>
