--- a/public/css/about_and_help.css
+++ b/public/css/about_and_help.css
@@ -14,6 +14,12 @@ body {
 .footer{
 	text-align: center;
 	}
+.help_images{
+	max-width: 100%;
+	border: 2px solid #021a40;
+	margin-left: auto;
+	margin-right: auto;
+	}
 /*Accordion*/
 .accordion, .accordion *{
 	-webkit-box-sizing: border-box;
