--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -28,7 +28,7 @@
 			 		<div id = "fullPostInfo">placeholder</div>
 			  	</div>
 			  	<div class="panel-footer">
-			  		<small id = "fullPostDate">placeholder<small>
+			  		<small id = "fullPostDate" style="color:LightGray">placeholder<small>
 			  	</div>
 			  	
 			</div>
