--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -44,15 +44,15 @@
 											
 											<div id="accordion-2" class="accordion-section-content">
 												<h6><b>Mona</b></h6>
-												<img src="/images/mona.jpg">
+												<img src="/images/mona.jpg" class="help_images">
 												<p>Mona is senior at UCSD. She is majoring in Computer Science with a focus on graphics. Her hobbies include dancing, video games, and skiing.</p>
 
 												<h6><b>Kevin</b></h6>
-												<img src="/images/kevin.jpg">
+												<img src="/images/kevin.jpg" class="help_images">
 												<p>Kevin is a junior at UCSD. He is majoring in Computer Engineering with a focus in Artificial Intelligence. His hobbies include playing basketball, working out, and listening to music.</p>
 
 												<h6><b>Julia</b></h6>
-												<img src="/images/julia.jpg">
+												<img src="/images/julia.png" class="help_images">
 												<p>Julia is junior at UCSD. She is majoring in Cognitive Science with a specialization in Human-Computer Interaction and a minor in Computer Science. Her hobbies include getting tattoos, watching movies, and hanging out with her cat.</p>
 											</div>
 										</div>
