make date info more readable, add dateDay sorting

--- a/views/partials/postSnippet.handlebars
+++ b/views/partials/postSnippet.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 
-	<div class="panel {{postCategory}} postSnippet" data-cat="{{postCategory}}" data-title="{{postTitle}}" data-info="{{postInfo}}" data-full="{{fullPost}}" data-bump="{{bumpCount}}" data-monid="{{_id}}" data-date="{{localDate}}">
+	<div class="panel {{postCategory}} postSnippet" data-cat="{{postCategory}}" data-title="{{postTitle}}" data-info="{{postInfo}}" data-full="{{fullPost}}" data-bump="{{bumpCount}}" data-monid="{{_id}}" data-date="{{dateString}}">
 	  <div class="panel-heading">
 		<h3 class="panel-title">
 			{{postTitle}}
