fix bump sort ref

--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -10,7 +10,7 @@
 			<li class="menuSeparator"></li>
 			<li role="presentation"><a href="/sort/date">Newest</a></li>
 			<li role="presentation"><a href="/sort/date/bump">Best Today</a></li>
-			<li role="presentation"><a href="/bumpView">Top posts</a></li>			
+			<li role="presentation"><a href="/sort/bump">Top posts</a></li>			
 			<li class="menuSeparator"></li>
 
 			<li role="presentation">Moods<li>
