debugging fixes and code cleanup

--- a/public/css/accSettings.css
+++ b/public/css/accSettings.css
@@ -1,20 +1,5 @@
-/* css styling for main app homepage and navigation bar
+/* css styling for accoutn settings page
  */
-
-
- /* formatting for the navigation bar
-  *
-  * padding for space for fixed to top
-  * fix margins for aligning right
-  */
-
-
- /* post classes */
-
-
-.panel-title {
-    text-align: left;
-}
 
 .panel-body {
 	text-align: left;
