--- a/public/css/feelzNaviBar.css
+++ b/public/css/feelzNaviBar.css
@@ -1,9 +1,8 @@
+/* css styling for the navigation bar
+ */
+
 .menuIcon {
 	text-align: left;
-}
-
-.feelzNaviBar {
-
 }
 
 /* always show a collapsed menu icon */
