--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,17 +5,15 @@
 		<title>FeelzApp</title>	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- bootstrap css files -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-		<link href="/css/FeelzApp.css" rel="stylesheet">
+		<!-- feelzapp universal css files -->
 		<link href="/css/simple-sidebar.css" rel="stylesheet">
 		<link href="/css/feelzNaviBar.css" rel="stylesheet">
-	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-	    <![endif]-->
+		<link href="/css/FeelzApp.css" rel="stylesheet">
+		<!-- page css files -->
+		<link href="/css/posts.css" rel="stylesheet">
 	</head>
 
 	<!-- body for the titlebar description and newPost popup -->
@@ -31,16 +29,13 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<!-- home page posts list-->
-							<div class="container">
-								<div class="alert alert-info alert-dismissible" role="alert">
-									<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									<strong>Information:</strong> New to Feelz? Click Help on the sidebar menu
-								</div>
-								{{#each posts}}
-									{{>postSnippet}}
-								{{/each}}
+							<div class="alert alert-info alert-dismissible" role="alert">
+								<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<strong>Information:</strong> New to Feelz? Click Help on the sidebar menu
 							</div>
-
+							{{#each posts}}
+								{{>postSnippet}}
+							{{/each}}
 						</div>
 					</div>
 				</div>
@@ -62,7 +57,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<!-- feelzApp universal js files -->
 	<script src="/js/feelzApp.js"></script>
-	<script src="/js/logout.js"></script>
+	<!-- page js files -->
+	<script src="/js/posts.js"></script>
 
 </html>
