add css signup/login, make code consistent

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,6 +1,8 @@
 <!doctype html>
-	<title>AboutFeelzApp</title>
+
+<html>
 	<head>
+		<title>AboutFeelzApp</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- bootstrap css files -->
@@ -15,7 +17,6 @@
 	</head>
 
 	<body>
-
 		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
@@ -78,7 +79,6 @@
 			<!-- end page-content-wrapper -->
 		</div>
 		<!-- end wrapper-->
-
 	</body>
 
 	<!-- Bootstrap core JavaScript
