--- a/views/template_with_sidebar.handlebars
+++ b/views/template_with_sidebar.handlebars
@@ -58,8 +58,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<!-- feelzApp universal js files -->
-	<script src="/js/sidebarSetup.js"></script>
-	<script src="/js/logout.js"></script>
+	<script src="/js/feelzApp.js"></script>
 	<!-- page js files -->
 
 </html>
