--- a/views/forgotPass.handlebars
+++ b/views/forgotPass.handlebars
@@ -1,50 +1,51 @@
 <!doctype html>
 
 <html>
-<head>
-  <title>Login to FeelzApp</title>  
-</head>
+  <head>
+    <title>Login to FeelzApp</title>
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-<!-- fixed position navibar on top of screen -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-           
-                <!-- navibar title -->
-                <a class="navbar-brand" href="login_page.html"><b>Feelz</b></a>
-            </div>
-        </div>
-    </nav>
+      <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-<body>
+    <link href="/css/feelzNaviBar.css" rel="stylesheet">
 
-<div class="container" style="margin-top: 10  0px">
-    <div class="row">
+  </head>
+
+  <body>
+
+    <!-- fixed position navibar on top of screen -->
+    {{> feelzTitleBar}}
+
+    <div class="container" style="margin-top: 10  0px">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="text-center">
-                          <h3><i class="fa fa-lock fa-4x"></i></h3>
-                          <h2 class="text-center">Forgot Password?</h2>
-                          <p>You can reset your password here.</p>
-                            <div class="panel-body">
-                              
-                              <form class="form">
-                                <fieldset>
-                                  <div class="form-group">
-                                    <div class="input-group">
-                                      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                      
-                                      <input id="emailInput" placeholder="email address" class="form-control" type="email" oninvalid="setCustomValidity('Please enter a valid email address!')" onchange="try{setCustomValidity('')}catch(e){}" required="">
-                                    </div>
-                                  </div>
-                                  <div class="form-group">
-                                    <input class="btn btn-lg btn-primary btn-block" value="Send My Password" type="submit">
-                                  </div>
-                                </fieldset>
-                              </form>
-                              
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="text-center">
+                              <h3><i class="fa fa-lock fa-4x"></i></h3>
+                              <h2 class="text-center">Forgot Password?</h2>
+                              <p>You can reset your password here.</p>
+                                <div class="panel-body">
+                                  
+                                  <form class="form">
+                                    <fieldset>
+                                      <div class="form-group">
+                                        <div class="input-group">
+                                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                                          
+                                          <input id="emailInput" placeholder="email address" class="form-control" type="email" oninvalid="setCustomValidity('Please enter a valid email address!')" onchange="try{setCustomValidity('')}catch(e){}" required="">
+                                        </div>
+                                      </div>
+                                      <div class="form-group">
+                                        <input class="btn btn-lg btn-primary btn-block" value="Send My Password" type="submit">
+                                      </div>
+                                    </fieldset>
+                                  </form>
+                            
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -52,14 +53,12 @@
             </div>
         </div>
     </div>
-</div>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  s</body>
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>>
 
@@ -67,4 +66,3 @@
     <script src="js/login.js"></script>
 
 
-</body>
