--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,95 +1,77 @@
 <!doctype html>
 
 <html>
-<head>
-	<title>Login to FeelzApp</title>	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <head>
+        <title>Login to FeelzApp</title> 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- bootstrap css files -->
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+        <!-- feelzapp universal css files -->
+        <link href="/css/feelzNaviBar.css" rel="stylesheet">
+        <link href="/css/FeelzApp.css" rel="stylesheet">
+        <!-- page css files -->
+        <link href="/css/login_signup.css" rel="stylesheet">
+    </head>
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-</head>
+        <!-- fixed position navibar on top of screen -->
+        {{> feelzTitleBar}}
 
-<!-- fixed position navibar on top of screen -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-           
-                <!-- navibar title -->
-                <a class="navbar-brand" href="/"><b>Feelz</b></a>
-            </div>
-        </div>
-    </nav>
+    <body>
+        <div class="container">    
+            <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+                <div class="panel panel-info" >
+                    <div class="panel-heading">
+                        <div class="panel-title">Sign In</div>
+                        <div id="forgotPassText"><a href="Forgot_Password">Forgot password?</a></div>
+                    </div>     
 
-<body>
-    <div class="container">    
-        <div id="loginbox" style="margin-top:20%;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
-            <div class="panel panel-info" >
-                <div class="panel-heading">
-                    <div class="panel-title">Sign In</div>
-                    <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="Forgot_Password">Forgot password?</a></div>
-                </div>     
-
-                <div style="padding-top:20px" class="panel-body" >
-
-                    <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-                            
-                    <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
-                                    
-                        <div style="margin-bottom: 15px" class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
-                        </div>
+                    <div class="panel-body" >
+                        <div id="login-alert" class="alert alert-danger col-sm-12"></div>
                                 
-                        <div style="margin-bottom: 15px" class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="login-password" type="password" class="form-control" name="password" placeholder="Password">
-                        </div>
+                        <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
+                            <div class="input-group inputStyle">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                    <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
+                            </div>
+                            <div class="input-group inputStyle">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Password">
+                            </div>                                
                                     
-
-                                
-                        <div class="input-group">
-                            <div class="checkbox">
+                            <div class="input-group checkbox">
                                 <label>
-                                    <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-                                    </label>
+                                    <input id="login-remember" type="checkbox" name="remember" value="1">Remember me</input>
+                                </label>
                             </div>
-                        </div>
 
-
-                        <div style="margin-top:10px" class="form-group">
-                        
-                            <!-- Button -->
-                            <div class="col-sm-12 controls">
-                        
-                                <!-- href="#" -->
-                                <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
-                                <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
-
-                            </div>
-                        </div>
-
-
-                        <div class="form-group">
-                            <div class="col-md-12 control">
-                                <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                    Don't have an account? 
-                                    <a href="Signup">
-                                        Sign up HERE!
-                                    </a>
+                            <div class="form-group buttonFormGroup">
+                                <!-- Button -->
+                                <div class="col-sm-12 controls">
+                                    <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
+                                    <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
                                 </div>
                             </div>
-                        </div>    
-                    </form>     
 
-                </div>                     
-            </div>  
+                            <div class="form-group">
+                                <div class="col-md-12 control">
+                                    <div id="accountStat"> Don't have an account? 
+                                        <a href="Signup"> Sign up HERE! </a>
+                                    </div>
+                                </div>
+                            </div>    
+                        </form>     
+
+                    </div>                     
+                </div>  
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
