--- a/public/css/login_signup.css
+++ b/public/css/login_signup.css
@@ -1,8 +1,8 @@
 /* login page css
  */
 
-#loginbox {
-	margin-top: 20%;
+#boxContainer {
+	margin-top: 10%;
 }
 
 #forgotPassText {
@@ -13,7 +13,7 @@
 }
 
 .panel-body {
-	padding-top: 20px;
+	padding-top: 15px;
 }
 
 #login-alert {
