--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -16,7 +16,7 @@
 
 	<body>
 
-		<div id="wrapper">
+		<div id="sideBarWrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
 
