--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,54 +19,54 @@
         {{> feelzTitleBar}}
 
     <body>
-        <div class="container">    
-            <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
-                <div class="panel panel-info" >
-                    <div class="panel-heading">
-                        <div class="panel-title">Sign In</div>
-                        <div id="forgotPassText"><a href="Forgot_Password">Forgot password?</a></div>
-                    </div>     
 
-                    <div class="panel-body" >
-                        <div id="login-alert" class="alert alert-danger col-sm-12"></div>
+        <div id="boxContainer" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">                    
+            <div class="panel panel-info" >
+                <div class="panel-heading">
+                    <div class="panel-title">Sign In</div>
+                    <div id="forgotPassText"><a href="Forgot_Password">Forgot password?</a></div>
+                </div>     
+
+                <div class="panel-body" >
+                    <div id="login-alert" class="alert alert-danger col-sm-12"></div>
+                            
+                    <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
+                        <div class="input-group inputStyle">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
+                        </div>
+                        <div class="input-group inputStyle">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                <input id="login-password" type="password" class="form-control" name="password" placeholder="Password">
+                        </div>                                
                                 
-                        <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
-                            <div class="input-group inputStyle">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                    <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username or Email">                                        
-                            </div>
-                            <div class="input-group inputStyle">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Password">
-                            </div>                                
-                                    
-                            <div class="input-group checkbox">
-                                <label>
-                                    <input id="login-remember" type="checkbox" name="remember" value="1">Remember me</input>
-                                </label>
-                            </div>
+                        <div class="input-group checkbox">
+                            <label>
+                                <input id="login-remember" type="checkbox" name="remember" value="1">Remember me</input>
+                            </label>
+                        </div>
 
-                            <div class="form-group buttonFormGroup">
-                                <!-- Button -->
-                                <div class="col-sm-12 controls">
-                                    <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
-                                    <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
+                        <div class="form-group buttonFormGroup">
+                            <!-- Button -->
+                            <div class="col-sm-12 controls">
+                                <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
+                                <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12 control">
+                                <div id="accountStat"> Don't have an account? 
+                                    <a href="Signup"> Sign up HERE! </a>
                                 </div>
                             </div>
+                        </div>    
+                    </form>     
 
-                            <div class="form-group">
-                                <div class="col-md-12 control">
-                                    <div id="accountStat"> Don't have an account? 
-                                        <a href="Signup"> Sign up HERE! </a>
-                                    </div>
-                                </div>
-                            </div>    
-                        </form>     
-
-                    </div>                     
-                </div>  
-            </div>
+                </div>                     
+            </div>  
         </div>
+
     </body>
 
     <!-- Bootstrap core JavaScript
@@ -76,6 +76,6 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <!-- Login JavaScript -->
-    <script src="js/login.js"></script>
+    <script src="js/login_signup.js"></script>
 
 </html>
