--- a/views/template_with_sidebar.handlebars
+++ b/views/template_with_sidebar.handlebars
@@ -18,7 +18,7 @@
 
 	<!-- body for the titlebar description and newPost popup -->
 	<body>
-		<div id="wrapper">
+		<div id="sideBarWrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBar}}
 
