--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -18,7 +18,7 @@
 
 <body>
 
-	<div id="sideBarWrapper">
+	<div id="wrapper">
 
 		<!-- fixed position navibar on top of screen -->
 		{{>feelzNaviBarNoPost}}
