--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,8 +1,6 @@
 <!doctype html>
-
-<html>
+	<title>AboutFeelzApp</title>
 	<head>
-		<title>AboutFeelzApp</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- bootstrap css files -->
@@ -17,7 +15,8 @@
 	</head>
 
 	<body>
-		<div id="sideBarWrapper">
+
+		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
 
@@ -79,6 +78,7 @@
 			<!-- end page-content-wrapper -->
 		</div>
 		<!-- end wrapper-->
+
 	</body>
 
 	<!-- Bootstrap core JavaScript
