--- a/public/css/accSettings.css
+++ b/public/css/accSettings.css
@@ -1,5 +1,20 @@
-/* css styling for accoutn settings page
+/* css styling for main app homepage and navigation bar
  */
+
+
+ /* formatting for the navigation bar
+  *
+  * padding for space for fixed to top
+  * fix margins for aligning right
+  */
+
+
+ /* post classes */
+
+
+.panel-title {
+    text-align: left;
+}
 
 .panel-body {
 	text-align: left;
