--- a/public/css/feelzNaviBar.css
+++ b/public/css/feelzNaviBar.css
@@ -1,8 +1,9 @@
-/* css styling for the navigation bar
- */
-
 .menuIcon {
 	text-align: left;
+}
+
+.feelzNaviBar {
+
 }
 
 /* always show a collapsed menu icon */
