--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -1,6 +1,14 @@
 <!doctype html>
 
 <html>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-12">
+			<!-- page content here -->
+		</div>
+	</div>
+</div>
 				
 	<div id="popup_container_panel">
 		<div id="postFull" class="panel postFull">
