fix sidebar toggle

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<div id="sideBarWrapper">
+		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBarNoPost}}
 
