--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 
 	<!-- body for the titlebar description and newPost popup -->
 	<body>
-		<div id="sideBarWrapper">
+		<div id="wrapper">
 			<!-- fixed position navibar on top of screen -->
 			{{>feelzNaviBar}}
 
@@ -58,7 +58,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<!-- feelzApp universal js files -->
-	<script src="/js/feelzApp.js"></script>
+
 	<!-- page js files -->
 	<script src="/js/posts.js"></script>
 
