fixed cancel new post typo and changed signup form

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -30,35 +30,15 @@
                     <form class="form" role="form"  action="/SignupFormSubmit">
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
-                                <input class="form-control" name="firstname" placeholder="First Name" type="text" autofocus/>
+                                <input class="form-control" name="firstname" placeholder="First Name" type="text"/>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <input class="form-control" name="lastname" placeholder="Last Name" type="text" />
                             </div>
                         </div>
-                        <input class="form-control" name="username" placeholder="Username" type="text" autofocus required/>
-                        <input class="form-control" name="email" placeholder="Your Email" type="email" required/>
-                        <input class="form-control" name="reenteremail" placeholder="Re-enter Email" type="email" />
-                        <input class="form-control" name="password" placeholder="New Password" type="password" required/>
-                        <label for="">
-                            Birth Date</label>
-                        <div class="row">
-                            <div class="col-xs-4 col-md-4">
-                                <select class="form-control">
-                                    <option value="Month">Month</option>
-                                </select>
-                            </div>
-                            <div class="col-xs-4 col-md-4">
-                                <select class="form-control">
-                                    <option value="Day">Day</option>
-                                </select>
-                            </div>
-                            <div class="col-xs-4 col-md-4">
-                                <select class="form-control">
-                                    <option value="Year">Year</option>
-                                </select>
-                            </div>
-                        </div>
+                        <input class="form-control" name="email" placeholder="Your Email"/>
+                        <input class="form-control" name="username" placeholder="Username" type="text"/>
+                        <input class="form-control" name="password" placeholder="New Password"/>
                         <br />
 
                         <input type="submit" id="btn-signup" class="btn btn-lg btn-primary btn-block" value="Sign up"></input>
