fixing bugs found in section see description
on mobile newpost keyboard popup pushes it up too far

help order - put help then settings then about, make it more clear it's
help section

--- a/views/partials/feelzNaviBarNoPost.handlebars
+++ b/views/partials/feelzNaviBarNoPost.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 	<!-- fixed position navibar on top of screen -->
-	<nav id="feelzNaviBarNoPost" class="navbar navbar-default navbar-fixed-top">
+	<nav id="feelzNaviBarNoPost" class="navbar navbar-default navbar-static-top">
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
