--- a/views/partials/feelzTitleBar.handlebars
+++ b/views/partials/feelzTitleBar.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 	<!-- fixed position navibar on top of screen -->
-	<nav id="feelzTitleBar" class="navbar navbar-default navbar-static-top">
+	<nav id="feelzTitleBar" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<!-- navibar title -->
