change sidebar order see description
section test notes:

help order - put help then settings then about, make it more clear it's
help section

--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -5,7 +5,7 @@
     <div id="sidebar-wrapper">
 		<ul class="sidebar-nav">
 			<!--<li class="sidebar-brand">Menu</li>
-			<li role="presentation"><a href="/">Home</a></li> -->
+			<li role="presentation"><a href="/">Home</a></li>w -->
 			<li role="presentation" class="active">Sort All Posts</li>
 			<li class="menuSeparator"></li>
 			<li role="presentation"><a href="/sort/date">Newest</a></li>
@@ -27,9 +27,9 @@
 			<li role="presentation">Help and Settings<li>
 			<li class="menuSeparator"></li>
 			
-			<li role="presentation"><a href="/About">About</a></li>
 			<li role="presentation"><a href="/Help">Help</a></li>
 			<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
+			<li role="presentation"><a href="/About">About</a></li>
 			<li role="presentation"><a id="logoutButton" href="/Login">Log Out</a> <br/> <br/> </li>
 		</ul>
 	</div>
