changed "welcome" to "hi"

--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -17,7 +17,7 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-left pull-left">
-					<p class="navbar-text">Welcome {{username}}</p>
+					<p class="navbar-text">Hi, {{username}}!</p>
 				</div>
 				<div class="navbar-right pull-right">
 					<!--- make newpost button on the navibar.  
