--- a/views/partials/feelzNaviBarNoPost.handlebars
+++ b/views/partials/feelzNaviBarNoPost.handlebars
@@ -17,7 +17,7 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-left pull-left">
-					<p class="navbar-text" style="margin-right:3px">Welcome {{username}}</p>
+					<p class="navbar-text" style="margin-right:3px">Hi, {{username}}!</p>
 				</div>
 			</div>
 
