--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -63,9 +63,16 @@
 											</div>
 										</div>
 										<div class="accordion-section">
-											<a class="accordion-section-title" href="#accordion-4">Bumping Posts</a>
+											<a class="accordion-section-title" href="#accordion-4">Why Can't I Post?</a>
 											
 											<div id="accordion-4" class="accordion-section-content">
+												<p>If you are using Safari on an iPhone, chances are you may not be able to post. If you would like to post on FeelzApp, please download Google Chrome on your iPhone and use that as your browser.</p>
+											</div>
+										</div>
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-5">Bumping Posts</a>
+											
+											<div id="accordion-5" class="accordion-section-content">
 												<h6><b>I really liked a post I saw, how do I express this?</b></h6>
 												<img src="images/bump_button.png" class="help_images"></br>
 												<p>Feeling a post? Awesome! Go ahead and tap/click on the post and select "bump" from the top right corner. This will move the post to the top of the feed and give it Feel points!</p>
